<resources>
    <string name="app_name">AskUrFrnd</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_send">Send</string>
    <string name="title_activity_main">AskUrFrnds</string>
    <string name="Next">next</string>
    <string name="createQuiz">Create Quiz</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="title_activity_create_quiz">New Quiz</string>
    <string-array name="main_activity_tabs">
        <item>Quiz</item>
        <item>Friends</item>
    </string-array>
    <string-array name="add_friends_activity_tabs">
        <item>Find</item>
        <item>Requests</item>
    </string-array>
    <string-array name="create_quiz_activity_tabs">
        <item>New Question</item>
        <item>Questions</item>
        <item>Suggestions</item>
    </string-array>
    <string name="title_activity_take_quiz">Quiz</string>
    <string name="sample_question">This is a sample question just to check the view.....</string>

    <string name="questionHint">Question</string>
    <string name="optionA">Option 1</string>
    <string name="optionB">Option 2</string>
    <string name="optionC">Option 3</string>
    <string name="optionD">Option 4</string>
    <string name="send">Send</string>

    <string name="answerA">A</string>
    <string name="answerB">B</string>
    <string name="answerC">C</string>
    <string name="answerD">D</string>
    <string name="title_activity_signup">Signup</string>
    <string name="Name">Name</string>
    <string name="signup">Signup</string>
    <string name="clear">Reset</string>
    <string name="mail">e-mail</string>
    <string name="password">Password</string>
    <string name="phone">Phone No.</string>
    <string name="institution">Institution</string>
    <string name="place">Place</string>
    <string name="emptyFieldMessage">Some fields are left empty please fill them..!</string>
    <string name="signupSuccessMessage">You have been signed up Successfully.\nPlease check your mail for confirmation.</string>
    <string name="signupErrorMessage">Please check your Internet connection.</string>
    <string name="loginErrorMessage">Please check your Internet connection.</string>
    <string name="loginWrongDetailsMessage">E-mail or Password is incorrect.</string>
    <string name="title_activity_login">AskUrFrnd</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="forgot_password_message">Please follow the istructions sent to your mail id.</string>
    <string name="forgot_password_success">A mail has been sent to your mail id.\nIt may take some time to reach you.</string>
    <string name="forgot_password_not_found">The mail id was not found.</string>
    <string name="forgot_password_error">Something went wrong please try again.</string>
    <string name="no_new_data_found">No new data found.</string>
    <string name="title_activity_add_friends">Add Friends</string>
    <string name="action_logout">Logout</string>
    <string name="action_result">Results</string>
    <string name="select_friend">Select friend to send.\n Its just a demo.</string>
    <string name="long_click">Long Click on a question to remove it.</string>
    <string name="no_question">No questions to send.</string>
    <string name="no_new_quiz">No new quiz.</string>
    <string name="no_friends">Find and add new friends.</string>
    <string name="no_requests">No friend request.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_result">Results</string>
    <string name="no_suggestions">No suggestions create your questions and they will be added to your suggestions.</string>
    <string name="privacy_and_terms">I Agree to the terms and conditions and privacy statements.</string>
    <string name="contacts_data">Your contact details will not be visible to anyone.</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="trydevs_link">http://www.trydevs.in</string>
    <string name="sundar">Sundareswaran</string>
    <string name="developer">Developer,</string>
    <string name="email">sundareswaran@trydevs.in</string>
    <string name="info">Ask Your Friends is an app that is got from a small idea from a few friends. \n If you have any problems please contact us. \n you can also view us in the link \n http://www.askyourfriend.in</string>

</resources>
