<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="10"
    tools:context="com.trydevs.askyourfriends.askurfrnds.activity.InfoActivity">

    <TextView
        android:id="@+id/textView_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/info"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer"
        android:textColor="@color/primary_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sundar"
        android:textColor="@color/primary_dark" />

    <TextView
        android:id="@+id/TextView_trydevs_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/trydevs_link"
        android:textColor="@color/primary_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/primary_dark" />
</LinearLayout>
