<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.trydevs.askyourfriends.askurfrnds.activity.LoginActivity">

    <EditText
        android:id="@+id/login_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@color/white"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:padding="@dimen/_8dp" />

    <EditText
        android:id="@+id/login_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:lines="1"
        android:padding="@dimen/_8dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@color/accent"
        android:padding="@dimen/_8dp"
        android:text="@string/login"
        android:textColor="@color/text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/login_signup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/signup"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text" />

    </LinearLayout>

</LinearLayout>
