<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/create_question_editText">

        <com.andexert.library.RippleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:rv_color="@color/accent">

            <EditText
                android:id="@+id/editText_question"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editText_question"
                android:hint="@string/questionHint"
                android:inputType="textShortMessage"
                android:maxLines="3" />
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:rv_color="@color/accent">

            <EditText
                android:id="@+id/editText_optionA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/optionA"
                android:inputType="textShortMessage"
                android:maxLines="1"
                android:paddingBottom="@dimen/option_bottom"
                android:paddingTop="@dimen/option_top" />
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:rv_color="@color/accent">

            <EditText
                android:id="@+id/editText_optionB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/optionB"
                android:inputType="textShortMessage"
                android:maxLines="1"
                android:paddingBottom="@dimen/option_bottom"
                android:paddingTop="@dimen/option_top" />
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:rv_color="@color/accent">

            <EditText
                android:id="@+id/editText_optionC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/optionC"
                android:inputType="textShortMessage"
                android:maxLines="1"
                android:paddingBottom="@dimen/option_bottom"
                android:paddingTop="@dimen/option_top" />
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:rv_color="@color/accent">

            <EditText
                android:id="@+id/editText_optionD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/optionD"
                android:inputType="textShortMessage"
                android:maxLines="1"
                android:paddingBottom="@dimen/option_bottom"
                android:paddingTop="@dimen/option_top" />
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:rv_color="@color/accent">

            <RadioGroup
                android:id="@+id/radio_group_answer_create_quiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/option_bottom"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/question_create_radio_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/answerA" />

                <RadioButton
                    android:id="@+id/question_create_radio_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/answerB" />

                <RadioButton
                    android:id="@+id/question_create_radio_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/answerC" />

                <RadioButton
                    android:id="@+id/question_create_radio_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/answerD" />
            </RadioGroup>
        </com.andexert.library.RippleView>
    </LinearLayout>

</android.support.v7.widget.CardView>