<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary_dark"
    tools:context="com.trydevs.askyourfriends.askurfrnds.activity.ForgotPasswordActivity">

    <include
        android:id="@+id/top_bar_forgot_password"
        layout="@layout/top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:layout_margin="@dimen/_8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_password_message"
            android:textColor="@color/text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:layout_marginTop="@dimen/_8dp"
            android:padding="@dimen/_8dp"
            android:id="@+id/forgot_password_mail_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/mail" />

        <Button
            android:layout_margin="@dimen/_8dp"
            android:padding="@dimen/_8dp"
            android:id="@+id/forgot_password_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_gravity="center"
            android:textColor="@color/text"
            android:background="@color/accent" />

    </LinearLayout>
</LinearLayout>
